Implementacja weryfikacji sygnatury i aktualizacja obsługi walut w serwisach płatności + testy (#11)
Zaimplementowano weryfikacje sygnatury przy zwrocie płatności. Zaaktualizowano dokumentację API. Zmieniono sposób weryfikacji obsługiwanych walut w serwisach: TPay, Paynow oraz Noda. Rozszerzono test integracyjny TransactionControllerTest o nowe funkcjonalności. Wprowadzono TransactionSignatureService do obliczania podpisów. Zaktualizowano TransactionController, aby używał TransactionSignatureFacade do weryfikacji podpisów oraz dodano sprawdzanie, czy transakcja została już zrefundowana lub czy znajduje się w trakcie procesu refundacji. Ulepszono logikę transakcji zwrotów w PaynowService z odpowiednią obsługą wyjątków. Dodano UnexpectedStatusCodeException w celu lepszego zarządzania błędami. Poprawiono test integracyjny TransactionControllerTest
