# app/Http/Controllers/TransactionController.php
@@ -4,6 +4,9 @@ namespace App\Http\Controllers;
 
 use App\Enums\PaymentMethod;
 use App\Enums\TransactionStatus;
+use App\Exceptions\RefundNotSupportedException;
+use App\Exceptions\UnexpectedStatusCodeException;
+use App\Facades\TransactionSignatureFacade;
 use App\Factory\PaymentMethodFactory;
 use App\Jobs\ProcessWebhookJob;
 use App\Models\Merchant;
@@ -11,11 +14,15 @@ use App\Models\Transaction;
 use App\Services\CreateTransactionValidatorService;
 use Illuminate\Http\JsonResponse;
 use Illuminate\Http\Request;
+use Illuminate\Foundation\Auth\Access\AuthorizesRequests;
 use Illuminate\Support\Facades\Log;
+use Illuminate\Support\Facades\Gate;
 use OpenApi\Attributes as OA;
 
 class TransactionController extends Controller
 {
+    use AuthorizesRequests;
+
     public function __construct(private CreateTransactionValidatorService $validator)
     {
     }
@@ -33,6 +40,7 @@ class TransactionController extends Controller
                     new OA\Property(property: "amount", type: "string", example: "12.34"),
                     new OA\Property(property: "email", type: "string", example: "jan.kowalski@gmail.com"),
                     new OA\Property(property: "name", type: "string", example: "Jan Kowalski"),
+                    new OA\Property(property: "currency", type: "string", example: "PLN"),
                     new OA\Property(
                         property: "paymentMethod",
                         type: "string",
@@ -87,7 +95,12 @@ class TransactionController extends Controller
         }
 
         $paymentService = PaymentMethodFactory::getInstanceByPaymentMethod(PaymentMethod::tryFrom($transactionBody['paymentMethod']));
-        $createTransactionDto = $paymentService->create($transactionBody);
+
+        try {
+            $createTransactionDto = $paymentService->create($transactionBody);
+        } catch (\App\Exceptions\UnsupportedCurrencyException $e) {
+            return response()->json(['error' => $e->getMessage()], 400);
+        }
 
         if ($createTransactionDto === null) {
             Log::error('[CONTROLLER][CREATE][ERROR] Payment service returned null for transaction creation', [
@@ -175,6 +188,15 @@ class TransactionController extends Controller
                 ]
             )
         ),
+        parameters: [
+            new OA\Parameter(
+                name: "signature",
+                in: "header",
+                required: true,
+                description: "HMAC signature of the request body",
+                schema: new OA\Schema(type: "string", example: "0798f264-f887-4102-b0ce-9d27e3076cc5")
+            )
+        ],
         responses: [
             new OA\Response(
                 response: 200,
@@ -200,6 +222,7 @@ class TransactionController extends Controller
     public function refundPayment(Request $request): JsonResponse
     {
         $refundBody = $request->all();
+        $headers = $request->header();
         $transaction = Transaction::where('transaction_uuid', $refundBody['transactionUuid'])->first();
 
         if (empty($refundBody['transactionUuid']) || !$transaction) {
@@ -209,13 +232,48 @@ class TransactionController extends Controller
             return response()->json(['error' => 'Missing or invalid data.'], 400);
         }
 
+        if ($headers['signature'][0] !== TransactionSignatureFacade::calculateSignature($transaction)) {
+            Log::error('[CONTROLLER][REFUND][ERROR] Missing or invalid signature.', [
+                'transactionUuid' => $refundBody['transactionUuid'],
+                'signatureFromHeader' => $headers['signature'][0],
+                'calculatedSignature' => TransactionSignatureFacade::calculateSignature($transaction)
+            ]);
+            return response()->json(['error' => 'Missing or invalid signature.'], 400);
+        }
+
+        if (Gate::denies('refund', $transaction)) {
+            Log::error('[CONTROLLER][REFUND][ERROR] Unauthorized to refund this transaction.');
+            return response()->json(['error' => 'Unauthorized to refund this transaction.'], 403);
+        }
+
         Log::info('[CONTROLLER][REFUND][START] Received refund payment request', [
             'paymentMethod' => $transaction->payment_method->value,
             'transactionUuid' => $refundBody['transactionUuid'],
         ]);
 
+        if ($transaction->status === TransactionStatus::REFUND_SUCCESS) {
+            Log::info('[CONTROLLER][REFUND][TRANSACTION][CHECK] Transaction has been successfully refunded.', [
+                'refundCode' => $transaction->refund_code,
+                'transactionUuid' => $transaction->transaction_uuid,
+            ]);
+            return response()->json(['error' => 'Transaction has been successfully refunded.'], 400);
+        }
+
+        if ($transaction->status === TransactionStatus::REFUND_PENDING) {
+            Log::info('[CONTROLLER][REFUND][TRANSACTION][CHECK] Transaction refund is in progress.', [
+                'refundCode' => $transaction->refund_code,
+                'transactionUuid' => $transaction->transaction_uuid,
+            ]);
+            return response()->json(['error' => 'Transaction refund is in progress.'], 400);
+        }
+
         $paymentService = PaymentMethodFactory::getInstanceByPaymentMethod($transaction->payment_method);
-        $refundPaymentDto = $paymentService->refund($refundBody);
+
+        try {
+            $refundPaymentDto = $paymentService->refund($refundBody);
+        } catch (RefundNotSupportedException | UnexpectedStatusCodeException $e) {
+            return response()->json(['error' => $e->getMessage()], 400);
+        }
 
         if ($transaction && $refundPaymentDto !== null && $refundPaymentDto->status === TransactionStatus::REFUND_PENDING) {
             $transaction->status = TransactionStatus::REFUND_PENDING;
